Bug 774841 - Check the proper extension before using ImageTargetTexture2D - r=bgirard